[package]
name = "module_manager"
version = "0.2.0"
edition = "2021"
authors = ["Papp Adam <p.adam555@proton.me>"]
repository = "https://github.com/PappAdam/module_manager"
license = "MIT"
description = "Crate to Manage modules"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
modules_derive = { path = "modules_derive", version = "0.2.0" }
