[package]
name = "module_manager"
version = "0.2.2"
edition = "2021"
authors = ["Papp Adam <p.adam555@proton.me>"]
repository = "https://github.com/PappAdam/module_manager"
license = "MIT"
description = "Crate to Manage modules"

[lib]
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
module_manager_derive = "0.2.0"
